--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -4,5 +4,11 @@
   },
   "app_description": {
     "message": "WhatsApp Web için Gizlilik Filtresi"
+  },
+  "welcome_description": {
+    "message": "Eklenti ayarları bir sonraki sürüm ile birlikte eklenecektir."
+  },
+  "popup_description": {
+    "message": "Gizlilik filtresini 'CTRL + ALT + Q' tuş kombinasyonu ile aktif/pasif yapabilirsiniz."
   }
 }
