Now supports Opera

--- a/source/_locales/tr/messages.json
+++ b/source/_locales/tr/messages.json
@@ -36,10 +36,10 @@
     "message": "Son mesajın başlığı"
   },
   "option_recentMessage_avatar": {
-    "message": "Son mesajın' avatarı"
+    "message": "Son mesajın avatarı"
   },
   "option_recentMessage_time": {
-    "message": "Son mesajın' sati"
+    "message": "Son mesajın sati"
   },
   "option_recentMessage_sender": {
     "message": "Son mesajın göndereni'"
