--- a/source/_locales/tr/messages.json
+++ b/source/_locales/tr/messages.json
@@ -42,7 +42,7 @@
     "message": "Son mesajın sati"
   },
   "option_recentMessage_sender": {
-    "message": "Son mesajın göndereni'"
+    "message": "Son mesajın göndereni"
   },
   "option_recentMessage_content": {
     "message": "Son mesajın içeriği"
