--- a/source/_locales/tr/messages.json
+++ b/source/_locales/tr/messages.json
@@ -15,7 +15,7 @@
     "message": "Ekranı ayır"
   },
   "welcome_description": {
-    "message": "v1.3'e Hoşgeldiniz"
+    "message": "v1.6'e Hoşgeldiniz"
   },
   "popup_description": {
     "message": "Kişiselleştirilmiş ayarlar için tarayıcınızdan eklentileri açıp sabitlemeyi unutmayın."
@@ -73,6 +73,9 @@
   },
   "edge_addons": {
     "message": "Edge Mağazası"
+  },
+  "opera_addons": {
+    "message": "Opera Mağazası"
   },
   "github": {
     "message": "GitHub"
